# dlstreamer

./: .travis.yml  .yamllint  CMakeLists.txt  Makefile  README.md  RELEASE_NOTES.md  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yaml  feature.yaml
.github/actions/common/code-style/: action.yml
.github/actions/common/hadolint/: action.yaml
.github/actions/common/license-namespace-checker/: action.yaml  rules-checker.py
.github/actions/common/pylint/: action.yaml
.github/actions/common/shellcheck/: action.yaml
.github/actions/common/yamllint/: action.yaml
.github/skills/dlstreamer-coding-agent/: SKILL.md
.github/skills/dlstreamer-coding-agent/assets/: README-template.md  export-models-template.py  python-app-template.py
.github/skills/dlstreamer-coding-agent/examples/: event-based-smart-nvr.md  license-plate-recognition.md  multi-stream-compose.md
.github/skills/dlstreamer-coding-agent/references/: coding-conventions.md  debugging-hints.md  design-patterns.md  model-preparation.md  pipeline-construction.md
.github/workflows/: dls-build-and-test-deb_pkgs-and-deb_imgs.yaml  dls-build-and-test-windows.yaml  dls-build-dev-docker-images-and-run-unit.yaml  dls-build-documentation.yaml  dls-build-fedora41-images.yaml  dls-build-sources-make-build.yaml  dls-coverity.yaml  dls-download-models.yaml  dls-pr-workflow.yaml  dls-test-optimizer.yaml  dls-weekly-cached-images.yaml  documentation-check.yaml  scorecard.yml  trivy-config-mode.yaml  zizmor-scan.yaml
SPECS/: README.md  download_sources.sh  versions.env
SPECS/gstreamer/: gstreamer.spec
SPECS/intel-dlstreamer/: intel-dlstreamer.spec
cmake/: version.cmake  vs_version.cmake  vs_version.rc.in
dependencies/: gstreamer.cmake  opencv.cmake  rdkafka.cmake
docker/fedora41/: fedora41.Dockerfile  intel-dlstreamer.spec
docker/ubuntu/: ubuntu-testing.Dockerfile  ubuntu22.Dockerfile  ubuntu24.Dockerfile
docker/ubuntu/debian/: control
docker/windows/: windows_builder.Dockerfile
docs/: .gitignore  README.md  build_html.sh
docs/_docker/: Dockerfile
docs/scripts/: all_models.yaml  models_yaml_from_zoo.py  sphinx_build.sh
docs/source/: index.md  release-notes.md  supported_models.md
docs/source/architecture_2.0/: cpp_elements.md  cpp_interfaces.md
docs/source/dev_guide/: coding_style.md  concurrent.md  custom_processing.md  dev_guide_index.md  dlstreamer-deepstream-coexistence.md  download_public_models.md  gpu_device_selection.md  lvms.md  metadata.md  model_preparation.md  object_tracking.md  python_bindings.md  yolo_models.md
docs/source/dev_guide/advanced_install/: advanced_build_docker_image.md  advanced_install_guide_compilation.md
docs/source/elements/: gvawatermark.md
docs/source/get_started/: tutorial.md
docs/source/get_started/install/: install_guide_ubuntu.md
docs/user-guide/: conf.py  index.md  release-notes.md  supported_models.md
docs/user-guide/_doxygen/: index.md
docs/user-guide/architecture_2.0/: cpp_interfaces.md  gstreamer_bins.md  gstreamer_elements.md  migration_guide.md  packaging.md  pytorch_inference.md
docs/user-guide/dev_guide/: converting_deepstream_to_dlstreamer.md  custom_processing.md  dev_guide_index.md  download_public_models.md  gpu_device_selection.md  how_to_create_model_proc_file.md  lvms.md  model_info_xml.md  model_preparation.md  model_proc_file.md  openvino_custom_operations.md  optimizer.md  python_bindings.md  transformers.md  yolo_models.md
docs/user-guide/dev_guide/advanced_install/: advanced_build_docker_image.md  advanced_install_guide_compilation.md  advanced_install_guide_index.md  advanced_install_on_windows.md
docs/user-guide/elements/: elements.md  g3dlidarparse.md  g3dradarprocess.md  gvaattachroi.md  gvaaudiodetect.md  gvaaudiotranscribe.md  gvaclassify.md  gvadetect.md  gvafpscounter.md  gvafpsthrottle.md  gvagenai.md  gvainference.md  gvametaaggregate.md  gvametaconvert.md  gvametapublish.md  gvamotiondetect.md  gvapython.md  gvarealsense.md  gvatrack.md  gvawatermark.md
docs/user-guide/get_started/: get_started_index.md  system_requirements.md  tutorial.md
docs/user-guide/get_started/install/: install_guide_ubuntu.md  install_guide_ubuntu_wsl2.md
docs/user-guide/release-notes/: release-notes-2024.md  release-notes-2025.md
include/dlstreamer/gst/metadata/: g3d_lidar_meta.h
include/dlstreamer/gst/videoanalytics/: CMakeLists.txt
samples/: download_omz_models.sh  download_public_models.sh  win_adapter.patch
samples/gstreamer/: README.md
samples/gstreamer/benchmark/: README.md
samples/gstreamer/concurrent/: README.md  concurrent_dls_and_ds.sh
samples/gstreamer/python/: README.md
samples/models/: convert_mars_deepsort.py
samples/windows/: README.md  download_omz_models.bat
samples/windows/gstreamer/: README.md
scripts/: DLS_install_prerequisites.sh  build_dlstreamer_dlls.ps1  hello_dlstreamer.sh  setup_dls_env.ps1
scripts/download_models/: hf_utils.py
scripts/optimizer/: __main__.py  optimizer.py
scripts/optimizer/processors/: inference.py
src/cpu/_gst_plugin/: CMakeLists.txt
src/cpu/_plugin/dlstreamer/cpu/elements/: CMakeLists.txt
src/gst/bins/: CMakeLists.txt
src/gst/elements/: CMakeLists.txt
src/gst/lib/: CMakeLists.txt
src/gst/metadata/: CMakeLists.txt  g3d_lidar_meta.cpp
src/monolithic/gst/3d_registrator/: CMakeLists.txt
src/monolithic/gst/elements/gvapython/: CMakeLists.txt
src/opencl/_plugin/dlstreamer/opencl/elements/: CMakeLists.txt
src/opencv/_gst_plugin/: CMakeLists.txt
tests/scripts/: installation-on-host-entrypoint-fedora.sh  installation-on-host-entrypoint.sh
tests/unit_tests/check/elements/watermark/: CMakeLists.txt
tests/unit_tests/check/elements/watermark/test_properties/: CMakeLists.txt  test_watermark_properties.cpp
tests/unit_tests/check/elements/watermark/test_watermark/: CMakeLists.txt  test_watermark_caps.cpp  test_watermark_config.cpp
tests/unit_tests/tests_gstgva/: test_pipeline_face_detection_and_classification.py  test_pipeline_vehicle_pedestrian_tracker.py
(+91 files in other folders)
